[package]
name = "mt19937"
version = "2.0.1"
authors = ["Noa <coolreader18@gmail.com>", "RustPython Team"]
edition = "2018"
license-file = "LICENSE"
description = "A translation of the MT19937 Mersenne Twister rng algorithm to Rust"
documentation = "https://docs.rs/mt19937"
repository = "https://github.com/RustPython/mt19937"

[dependencies]
rand_core = "0.6"
